www/css/index.css
/* ... */
#floor_label p span {
    font-size: 15px;
}
#map_wrapper {
    /*background-color: #d0b3b3;*/ /* The color is for debuggin purposes */
    background-color: white;
    height: auto;
    width: auto;
    display: inline-block;
    padding: 1500px; /* If you CHANGE this value, you should change also "_paddingMap" global variable*/
}
#map_sourcepoint {
    width: 2649px;
    height: 1493px;
}
#spa_map .footer, #spa_contact .footer{ /* ALSO USED IN 'CONTACT' PAGE */
    border-top: 5px solid rgba(51,53,55,1) !important;
    height: 50px !important;
}
#spa_map .footer > img:last-child, #spa_contact .footer > img:last-child{ /* la flechita significa todas las 'img' con parent 'footer' */ /* ALSO USED IN 'CONTACT' PAGE */
    padding: 1px;
    height: 100%;
}
#spa_map .footer > img:first-child { /* la flechita significa todas las 'img' con parent 'footer' */
    position: fixed;
    background-color: rgba(0, 0, 0, 0.44);
    /*margin-left: 10px;*/
    padding: 6px;
    height: 50px !important;
    bottom: 70px;
    /*left: 0px;*/
    left: 70px;
    display:none; /* It is not shown because it will be shown just in necessary cases*/
}
#spa_map .footer > img:first-child:active { /* la flechita significa todas las 'img' con parent 'footer' */
    background-color: rgba(0, 0, 255, 0.9);
}
#div_distanceTillDestination {
    position: fixed;
    margin-left: auto;
    margin-right: 0px;
    right: 0px;
    bottom: 70px;
    background-color: rgba(0, 0, 0, 0.44);
    padding: 3px;
    width: auto;
    min-width: 110px;
    height: 50px;
}
#div_distanceTillDestination img {
    height: 100% !important;
    padding-top: 3px;
    padding-bottom: 3px;
    padding-left: 5px;
    padding-right: 5px;
    margin-left: -3px;
    float: left;
}
#div_distanceTillDestination p {
    display: inline-block;
    font-size:25px;
    color: rgb(255, 0, 0);
    text-align: center;
    vertical-align: middle;
    text-shadow: none !important;
    line-height: 45px; /* This is an approximate value to div's height so as to center the text vertically */
}
#spa_map #div_liveSearchResults, #spa_contact #div_liveSearchResults, #spa_edit_contact #div_liveSearchResults { /* ALSO USED IN 'CONTACT' PAGE AND 'EDIT_CONTACT' PAGE */
    margin-left: -45%;
}
#destinationPoint_circle, #youPoint_circle {
    position: absolute;
    visibility: hidden;
}
#destinationPoint_SVG_circle {
    fill: rgb(246,162,0);
}
#youPoint_SVG_circle {
    stroke: rgb(117,29,29);
    stroke-width: 0px;
    fill: red;
    fill-opacity: 0.8;
}
#youPoint_SVG_circle2 {
    fill: #C80000;
}
#p_you_label, #p_upstairs_downstairs {
    background-color: red;
    padding: 9px 12px 9px 12px;
    border-radius: 7px;
    color: white;
    box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.9);
    display: inline;
    font-size:45px;
    font-weight: bold;
    position: absolute;
    visibility: hidden;
}
#p_dest_label {
    background-color: darkorange;
    padding: 9px 12px 9px 12px;
    border-radius: 7px;
    color: white;
    box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.9);
    display: inline;
    font-size:45px;
    font-weight: bold;
    position: absolute;
    visibility: hidden;
}
#p_dest_label, #p_you_label, #destinationPoint_circle, #youPoint_circle {
    z-index: 2;
}
@keyframes magician {
    from { opacity: 0; }
    to {opacity: 1; }
}
@-webkit-keyframes magician {
    from { opacity: 0; }
    to {opacity: 1; }
}
.anima_magician {  /* It affects: SPA_MAP */
    display:inline !important;
    animation:magician 2000ms 1;
    -webkit-animation:magician 2000ms 1;
    animation-fill-mode: forwards; /* Aplica las clases correspondientes al ultimo frame*/
    -webkit-animation-fill-mode: forwards; /* Aplica las clases correspondientes al ultimo frame*/
}
/* Media rules (@media) are used to change some CSS properties only if a certain condition is true. */
/* The CSS classes you might want to modify must be above the @media rules */
@media screen and (orientation: landscape) {
    #div_distanceTillDestination {
        height: 30px;
        bottom: 50px;
    }
    #div_distanceTillDestination p {
        font-size:20px;
        line-height: 25px; /* This is an approximate value to div's height so as to center the text vertically */
    }
    #spa_map .footer{
        border-top: 3px solid rgba(51,53,55,1) !important;
        height: 30px !important;
    }
    #spa_map .footer > img:first-child { /* la flechita significa todas las 'img' con parent 'footer' */
        height: 35px !important;
        bottom: 50px;
        left: 95px;
    }
    #floor_label {
        bottom: 50px;
        /*left: 55px;*/ /* this value is algo used in evothings.eddystone.js, function: 'checkIfUserAtTheSameFloor' */
        white-space: nowrap;
    }
    #floor_label p {
        line-height: initial;
        height: 35px;
        font-size: 18px;
        padding-top: 6px;
    }
    #floor_label p br {
        display: none;
    }
    #spa_map .input_search_bar { /* ALSO USED IN 'CONTACT' PAGE AND 'EDIT_CONTACT' PAGE */
        font-size: 15px;
    }
    #spa_map .header {
        height: 45px !important;
        border-bottom: 3px solid rgba(51,53,55,1) !important;
    }
    div[data-role=panel] p:first-of-type {
        font-size: 18px;
    }
    .btn_edit {
        font-size: 15px;
    }
    .btn_signout, .p_oauth_name, .p_oauth_emails {
        font-size: 13px;
    }

}
/* ... */

